# mcp_obsidian

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_rag.py  test_search.py
config/: config.example.yaml
scripts/: index_folder.sh  index_full.sh  index_incremental.sh  index_stats.sh  run_server.sh
src/mcp_obsidian/: __init__.py  auth.py  config.py  logging_config.py  models.py  obsidian_utils.py  search.py  server.py  vault.py
src/mcp_obsidian/rag/: __init__.py  base.py  chunking.py  embedding_providers.py  rag_engine.py  vector_store.py
tasks/: todo.md
tests/: __init__.py  conftest.py  test_auth.py  test_obsidian_utils.py  test_vault.py
